syntax = "proto3";
package patchbukkit.bridge;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "patchbukkit/abilities.proto";
import "patchbukkit/block.proto";
import "patchbukkit/common/types.proto";
import "patchbukkit/events/event.proto";
import "patchbukkit/message.proto";
import "patchbukkit/registry.proto";
import "patchbukkit/sound.proto";

service NativeBridge {
  rpc GetAbilities(patchbukkit.common.UUID) returns (patchbukkit.abilities.Abilities);
  rpc SetAbilities(patchbukkit.abilities.SetAbilitiesRequest) returns (patchbukkit.abilities.SetAbilitiesResponse);

  rpc RegisterEvent(patchbukkit.events.RegisterEventRequest) returns (google.protobuf.Empty);
  rpc CallEvent(patchbukkit.events.CallEventRequest) returns (patchbukkit.events.CallEventResponse);

  rpc SendMessage(patchbukkit.message.SendMessageRequest) returns (google.protobuf.Empty);

  rpc GetLocation(patchbukkit.common.UUID) returns (patchbukkit.common.Location);

  rpc GetBlock(patchbukkit.block.GetBlockRequest) returns (patchbukkit.block.GetBlockResponse);

  rpc GetRegistryData(patchbukkit.registry.GetRegistryDataRequest) returns (patchbukkit.registry.GetRegistryDataResponse);

  rpc PlayerEntityPlaySound(patchbukkit.sound.PlayerEntityPlaySoundRequest) returns (google.protobuf.Empty);
  rpc PlayerPlaySound(patchbukkit.sound.PlayerPlaySoundRequest) returns (google.protobuf.Empty);
}
