syntax = "proto3";

package patchbukkit.common;

import "patchbukkit/common/types.proto";

option java_multiple_files = true;
option java_package = "patchbukkit.common";

message RegisterEventRequest {
  string event_type = 1;
  string plugin_name = 2;
  int32 priority = 3;
  bool blocking = 4;
}
